prikaz svih roba ili usluga u index.html

--- a/ProjekatPI/src/main/resources/static/index.html
+++ b/ProjekatPI/src/main/resources/static/index.html
@@ -312,7 +312,20 @@
 
           </tbody>
         </table>
-        
+        <!-- Prikaz svih roba ili usluga -->
+      <table class="table" id="robeUslugeTable" style="display: none;">
+        <thead>
+          <tr>
+            <th style="text-align: center;">Sifra</th>
+            <th style="text-align: center;">Naziv</th>
+            <th style="text-align: center;">Jedinica mere</th>
+            <th></th>
+          </tr>
+        </thead>
+        <tbody id="tbodyRobaUsluga">
+
+        </tbody>
+      </table>
         
 </body>
 </html>
